<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneTransfer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_phone_number">Phone Number</string>
	<string name="timer_text">Timer</string>
	<string name="button_start">Start</string>
	<string name="button_stop">Stop</string>
	<string name="button_exit">Exit</string>
    
</resources>
